# phase-tools

./: .gitignore  .gitmodules  README.org
samples/: Makefile  test.add-parent-phasing.0.in.vcf  test.bam-phase-split.0.in.sam  test.bam-phase-split.0.in.vcf  test.bam-phase-split.0.out.1.0.sam  test.bam-phase-split.0.out.1.1.sam  test.extend-phase-set.1.out.vcf  test.ngs-phase.0.in.vcf
script/: add-parent-phasing
src/: CMakeLists.txt  Cigar.hpp  Het_Variation.hpp  Mapping.hpp  Phased_Set.hpp  Phased_Set_Connection.hpp  Phaser.cpp  Phaser.hpp  add-parent-phasing  bam-phase-split.cpp  collapse-phase-sets  config.h.cmake.in  extend-phase-set  logger.hpp  ngs-phase.cpp  overlapper.cpp  overlapper.h  shortcuts.hpp  test.extend-phase-set.0.in.vcf  test.extend-phase-set.0.out.vcf  test.extend-phase-set.2.in.vcf  test.extend-phase-set.2.out.vcf  version.cmake  version.h.in
src/bam-phase-split/: CMakeLists.txt  RC_Sequence.hpp  bam-phase-split.cpp
src/cmake/: BuildBoost.cmake  BuildHTSLib.cmake  FindHTSLib.cmake  update-version.cmake
src/cmake/Modules/: FindHTSlib.cmake
src/common/: CMakeLists.txt  Cigar.hpp  Mapping.hpp  Phased_Set_Connection.hpp
src/ngs-phase/: CMakeLists.txt  ngs-phase.cpp
src/scripts/: CMakeLists.txt  extend-phase-set  random-flip-phase-set
src/tests/: Makefile  test.add-parent-phasing.0.out.vcf  test.extend-phase-set.0.out.vcf  test.extend-phase-set.1.in.vcf  test.extend-phase-set.2.out.vcf  test.ngs-phase.0.in.fa  test.ngs-phase.0.in.sam  test.ngs-phase.0.out.vcf
